# rust.bf

./: CONTRIBUTING.md  Cargo.toml  README.md  cargo.toml
bf_examples/: alphabet_diagonal.bf  identity_matrix.bf  identity_matrix.min.bf
src/: lib.rs  main.rs
