[package]
name = "rust_bf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# serde_json is just for the example, not required in general
serde_json = "1.0"
